fix(Steps): icon background should be black in dark mode (#5371)

--- a/src/components/steps/steps.less
+++ b/src/components/steps/steps.less
@@ -16,7 +16,7 @@
     .@{class-prefix-step}-icon-container {
       position: absolute;
       z-index: 1;
-      background: var(--adm-color-white);
+      background: var(--adm-color-background);
       color: var(--icon-color);
       > .antd-mobile-icon {
         display: block;
